--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div [@routerTransition] class="login-page">
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <img class="user-avatar" src="assets/images/logo.png" width="150px" />
+            <img class="user-avatar" src="../assets/images/logo.png" width="150px" />
             <h1>Register Here</h1>
             <form role="form" [formGroup]="registerForm">
                 <div class="form-content">
