--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
             <form role="form"  [formGroup]="loginForm" >
                 <div class="form-content">
                     <div class="form-group">
-                        <input [placeholder]="'Username' | translate" class="form-control input-underline input-lg" type="text"
+                        <input [placeholder]="Username" class="form-control input-underline input-lg" type="text"
                         formControlName="username" (change)="changed($event)" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
                         <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                             <div *ngIf="f.username.errors.required">Username is required</div>
@@ -15,7 +15,7 @@
 
                     <div class="form-group">
                         <input
-                            [placeholder]="'Password' | translate"
+                            [placeholder]="Password"
                             class="form-control input-underline input-lg"
                             type="password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
                         />
