--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -6,7 +6,7 @@
             <form role="form" [formGroup]="registerForm">
                 <div class="form-content">
                     <div class="form-group">
-                        <input [placeholder]="First Name" class="form-control input-underline input-lg" type="text"
+                        <input [placeholder]="'First Name'" class="form-control input-underline input-lg" type="text"
                         formControlName="firstName"  [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
                         <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
                             <div *ngIf="f.firstName.errors.required">First Name is required</div>
@@ -14,7 +14,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input [placeholder]="Last Name" class="form-control input-underline input-lg" type="text"
+                        <input [placeholder]="'Last Name'" class="form-control input-underline input-lg" type="text"
                         formControlName="lastName"  [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
                         <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                             <div *ngIf="f.lastName.errors.required">Last Name is required</div>
@@ -22,7 +22,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input [placeholder]="UserName" class="form-control input-underline input-lg" type="text"
+                        <input [placeholder]="'UserName'" class="form-control input-underline input-lg" type="text"
                         formControlName="userName"  [ngClass]="{ 'is-invalid': submitted && f.userName.errors }" />
                         <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
                             <div *ngIf="f.userName.errors.required">UserName is required</div>
@@ -31,7 +31,7 @@
 
                     <div class="form-group">
                         <input
-                        [placeholder]="Password"
+                        [placeholder]="'Password'"
                         class="form-control input-underline input-lg"
                         type="password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
                     />
